Add web UI and services for object management

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
-gg.jte.development-mode=true
 spring.application.name=objectmannage
+spring.thymeleaf.cache=false
+spring.session.store-type=none
+spring.liquibase.enabled=false
+storage.upload-dir=uploads
