--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.thymeleaf.cache=false
 spring.session.store-type=none
 spring.liquibase.enabled=false
 storage.upload-dir=uploads
+spring.docker.compose.enabled=false
