Implement customer workflows and data history

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,18 @@ spring.application.name=objectmannage
 spring.thymeleaf.cache=false
 spring.session.store-type=none
 spring.liquibase.enabled=false
-storage.upload-dir=uploads
 spring.docker.compose.enabled=false
+
+storage.upload-dir=uploads
+
+spring.datasource.url=jdbc:h2:mem:objectdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
