Increase upload limit and add Excel preview

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.liquibase.enabled=false
 spring.docker.compose.enabled=false
 
 storage.upload-dir=uploads
+spring.servlet.multipart.max-file-size=25MB
+spring.servlet.multipart.max-request-size=25MB
+server.tomcat.max-swallow-size=25MB
 
 spring.datasource.url=jdbc:h2:mem:objectdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driver-class-name=org.h2.Driver
