--- a/build.gradle
+++ b/build.gradle
@@ -33,10 +33,12 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'com.fasterxml.jackson.core:jackson-databind'
+    implementation 'gg.jte:jte-spring-boot-starter-3:3.2.1'
     implementation 'org.apache.poi:poi-ooxml:5.2.5'
     implementation 'org.apache.poi:poi-scratchpad:5.2.5'
     implementation 'org.apache.pdfbox:pdfbox:2.0.30'
     implementation 'org.flywaydb:flyway-core'
+    implementation 'org.liquibase:liquibase-core'
 
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
