--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 spring.application.name=objectmannage
 spring.thymeleaf.cache=false
 spring.session.store-type=none
-spring.liquibase.enabled=false
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
+gg.jte.development-mode=true
+gg.jte.developmentMode=true
+spring.jpa.packages-to-scan=com.kapamejlbka.objectmanager,com.kapamejlbka.objectmannage
+spring.data.jpa.repositories.base-package=com.kapamejlbka.objectmanager.repository,com.kapamejlbka.objectmannage.repository
 spring.docker.compose.enabled=false
 
 storage.upload-dir=uploads
