--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,5 @@
 databaseChangeLog:
   - include:
       file: db/changelog/20240501-0001-create-site-table.yaml
+  - include:
+      file: db/changelog/20240501-0002-create-device-table.yaml
