--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
 gg.jte.development-mode=true
 gg.jte.developmentMode=true
 spring.jpa.packages-to-scan=com.kapamejlbka.objectmanager,com.kapamejlbka.objectmannage
-spring.data.jpa.repositories.base-package=com.kapamejlbka.objectmanager.repository,com.kapamejlbka.objectmannage.repository
+spring.data.jpa.repositories.base-package=com.kapamejlbka.objectmanager.repository,com.kapamejlbka.objectmanager.domain.user.repository,com.kapamejlbka.objectmannage.repository
 spring.docker.compose.enabled=false
 
 storage.upload-dir=uploads
