--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -3,3 +3,5 @@ databaseChangeLog:
       file: db/changelog/20240501-0001-create-site-table.yaml
   - include:
       file: db/changelog/20240501-0002-create-device-table.yaml
+  - include:
+      file: db/changelog/20240515-0003-create-app-user-tables.yaml
