--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -7,3 +7,5 @@ databaseChangeLog:
       file: db/changelog/20240515-0003-create-app-user-tables.yaml
   - include:
       file: db/changelog/20240601-0004-add-topology-coordinates.yaml
+  - include:
+      file: db/changelog/20241105-0005-add-route-main-material.yaml
