Add structured material categories and norms

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -9,3 +9,5 @@ databaseChangeLog:
       file: db/changelog/20240601-0004-add-topology-coordinates.yaml
   - include:
       file: db/changelog/20241105-0005-add-route-main-material.yaml
+  - include:
+      file: db/changelog/20241126-0006-align-material-enums.yaml
