--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,10 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += ['-Xlint:unchecked', '-Xlint:dep-ann', '-Xlint:deprecation']
+}
+
 springBoot {
     mainClass = 'com.kapamejlbka.objectmanager.ObjectManagerApplication'
 }
