--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -6,3 +6,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 gg.jte.development-mode=true
+
+spring.autoconfigure.exclude=gg.jte.springframework.boot.autoconfigure.JteAutoConfiguration
