--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,4 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 spring.autoconfigure.exclude=gg.jte.springframework.boot.autoconfigure.JteAutoConfiguration
+spring.devtools.restart.enabled=false
