Add ownership controls for customers and managed objects

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -13,3 +13,5 @@ databaseChangeLog:
       file: db/changelog/20241126-0006-align-material-enums.yaml
   - include:
       file: db/changelog/20241201-0007-add-managed-object-status.yaml
+  - include:
+      file: db/changelog/20250301-0008-add-ownership-access.yaml
